GAE対応と帰りタオいう。

--- a/web/index.html
+++ b/web/index.html
@@ -22,7 +22,7 @@
   <body>
     
     <div class="container">
-      <h2 id="title"><a href="#"><i class="glyphicon glyphicon-repeat"></i></a>&nbsp;家 -> JR</h2>
+      <h2 id="title"><a href="#" id="refresh"><i class="glyphicon glyphicon-repeat"></i></a>&nbsp;<a href="#" id="transfer"><i class="glyphicon glyphicon-transfer"></i></a>&nbsp;<span id="gt">家 -&gt; JR</span><span id="lt" style="display: none;">JR -&gt; 家</span></h2>
       <div id="contents"></div>
     </div>
     
@@ -31,10 +31,10 @@
       <small><span class="modified"></span>&nbsp;時点</small>
       <table class="table table-bordered table-striped">
         <tr>
-          <th>定刻</th>
-          <th>到着予測</th>
+          <th style="width: 75px;">定刻</th>
+          <th style="width: 75px;">到着予測</th>
           <th>【系統】行き先</th>
-          <th>状況</th>
+          <th style="width: 200px;">状況</th>
         </tr>
       </table>
     </div>
